# bit-buddy

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PATCH_NOTE.md  PROJECT_STRUCTURE.md  README.md  buddy_gui.py  debug_tools.py  deploy.py  docker-mesh-test.sh  enhanced_buddy.py  installer.py  mesh_network.py  pyproject.toml  requirements-full.txt  requirements.txt  setup.py  start.bat  start.sh  test-local-alternative.md  test_runner.py
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions-enhanced.md  copilot-instructions.md
.github/workflows/: build.yml  ci-cd.yml  ci.yml  release.yml
app/: config.yaml  mesh.py  mesh_ext.py  persona.py  rag.py  server.py
assets/: ICON_GUIDE.md  character_selector.py
assets/characters/: README.md
custodian/: manifest.yaml  persona.yaml  policy.yaml  story.md
docs/developer/: DEPLOYMENT_SUMMARY.md  GITHUB_DEVELOPMENT.md  QUICKSTART.md
docs/user/: END_USER_GUIDE.md
mvp/: DEMO_OUTPUT.txt  IMPLEMENTATION.md  MICROLLM_STRATEGY.md  README.md  bit_buddy.py  demo.py  microllm_brain.py  requirements.txt  run_demo.ps1  run_test.bat  server.py  validate_concept.py
scripts/: add-peer.ps1  index.ps1  mesh.ps1  persona.init.ps1  persona.randomize.ps1  persona.set.ps1  rotate-key.ps1  serve.ps1  setup.ps1  start-llamacpp-server.ps1  upgrade.ps1
tests/: __init__.py  test_buddy_system.py  test_server.py
tools/: cleanup.sh  debug_tools.py  deploy.py  fix_e501.py  generate_icon.py  pre_build_test.py  test_runner.py
