[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "requires_model: marks tests that need AI model files",
    "network: marks tests that require network access"
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-buddy"
dynamic = ["version"]
description = "Personal file system companion with AI personality"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bit Buddy Team", email = "hello@bitbuddy.dev"}
]
keywords = ["ai", "assistant", "files", "personality", "companion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.18",
    "fastembed>=0.3.4",
    "watchdog>=3.0.0",
    "pypdf>=4.3.1",
    "docx2txt>=0.8",
    "chardet>=5.2.0",
    "markdown-it-py>=3.0.0",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.4.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "numpy>=2.1.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]
models = [
    "llama-cpp-python>=0.2.20",
    "torch>=2.0.0",
    "transformers>=4.35.0"
]
gui = [
    "pandas>=2.1.0",
    "Pillow>=10.1.0",
    "openpyxl>=3.1.0",
    "websockets>=12.0"
]
full = [
    "bit-buddy[dev,models,gui]"
]

[project.scripts]
buddy = "deploy:main"
buddy-debug = "debug_tools:main"
buddy-setup = "setup:main"

[project.urls]
Homepage = "https://github.com/bitbuddy/bitbuddy"
Documentation = "https://bitbuddy.readthedocs.io/"
Repository = "https://github.com/bitbuddy/bitbuddy.git"
"Bug Reports" = "https://github.com/bitbuddy/bitbuddy/issues"

[tool.setuptools_scm]
write_to = "bit_buddy/_version.py"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = [".", "tests"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]